fix(progressive-img): remove backface-visibility hidden
it fixes a problem with cropped images

--- a/src/component/progressive-img.css
+++ b/src/component/progressive-img.css
@@ -10,7 +10,6 @@
   width: 100%;
   z-index: 1;
   transition: opacity 1s;
-  backface-visibility: hidden;
 }
 
 .before {
